# adventofcode2024

./: adventofcode2024.cabal  package.yaml
day01/: Main.hs
day02/: Main.hs
haskell/: CHANGELOG.md  adventofcode2024.cabal
haskell/day03/: Main.hs
ocaml/: aoc.opam  dune-project
ocaml/lib/: common.ml  dune
ocaml/solutions/: day01.ml  dune
ocaml/test/: dune  test_day01.ml
python/: aoc.py  pyproject.toml
src/: Lib.hs
