(lang dune 3.17)

(name aoc)

(generate_opam_files true)

(source
 (github AlexJMohr/adventofcode2024))

(authors "Alex Mohr <mohralexj@gmail.com>")

(license LICENSE)

(package
 (name aoc)
 (synopsis "Advent of Code 2024")
 (description "Advent of Code 2024")
 (depends ocaml alcotest))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
