[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "more-itertools>=10.5.0",
    "numpy>=2.1.3",
    "sympy>=1.13.3",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.3.4",
]
